# wyrdfold

./: .gitignore  .npmrc  .prettierignore  .trivyignore  .vercelignore  AUDIT_2026-06-22_round2.md  AUDIT_2026-06-22_round3.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  jest.config.ts  knip.ts  lighthouserc.json  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
apps/wyrdfold-api/: .env.example  .gitignore  AUDIT_2026-06-22.md  Dockerfile  README.md  project.json  pyproject.toml  railway.toml
apps/wyrdfold-api/app/: cache.py  config.py  constants.py  dependencies.py  http_client.py  logging_config.py  main.py  observability.py  rate_limit.py  scheduler.py  supabase_pool.py
apps/wyrdfold-api/app/models/: analysis.py  ats_lint.py  batch.py  conversation.py  diagnostics.py  embeddings.py  experience.py  feedback.py  insights.py  keys.py  learning.py  llm.py  logistics.py  schemas.py  tailor.py  targets.py  user_profile.py  waitlist.py
apps/wyrdfold-api/app/routers/: admin.py  analysis.py  discovery.py  experience.py  feedback.py  insights.py  jobs.py  keys.py  poll.py  sources.py  status.py  tailor.py  targets.py  user_profile.py  waitlist.py
apps/wyrdfold-api/app/seed/: company_seed.py
apps/wyrdfold-api/app/services/: account_deletion.py  ashby.py  ats_detect.py  batch.py  data_export.py  date_normalize.py  extract.py  feedback.py  firecrawl.py  greenhouse.py  ingestion_health.py  insights.py  jd_parser.py  jsonld.py  lever.py  lifecycle.py  llm_learner.py  notify.py  poll_lock.py  poller.py  recency.py  relevance_prefilter.py  retention.py  sanitize.py  scoring.py  smartrecruiters.py  source_discovery.py  standard_job.py  supabase_retry.py  target_scoring.py  url_health.py  validate.py  workday.py
apps/wyrdfold-api/app/services/analysis/: __init__.py  analyze.py  persistence.py  prompts.py  scoring.py
apps/wyrdfold-api/app/services/ats_lint/: __init__.py  linter.py  markdown_linter.py
apps/wyrdfold-api/app/services/conversation/: __init__.py  orchestrator.py  prompts.py
apps/wyrdfold-api/app/services/diagnostics/: __init__.py  funnel.py
apps/wyrdfold-api/app/services/docx/: __init__.py  pandoc_render.py  renderer.py  style.py
apps/wyrdfold-api/app/services/embeddings/: __init__.py  client.py  job_embeddings.py  mock.py  prescan_calibration.py  prescan_gate.py  prescan_shadow.py  pricing.py  target_embeddings.py  voyage_client.py
apps/wyrdfold-api/app/services/experience/: __init__.py  annotations.py  chunks.py  consolidate.py  derive.py  gap_tracker.py  optimized.py  preferences.py  prose.py  turns.py
apps/wyrdfold-api/app/services/fit/: __init__.py  axis_weights.py  daily_cap.py  job_fit.py  phase2_runner.py  (+3 more)
apps/wyrdfold-api/scripts/: EVALS.md  _openrouter.py  analyze_inflight.py  analyze_llm_burn.py  audit_phase1_fn.py  backfill_fit_scores.py  backfill_job_embeddings.py  backfill_payload_md.py  backfill_phase1_promising.py  backfill_phase2_fit.py  backfill_relevance_prefilter.py  backfill_slim_target.py  backfill_target_embeddings.py  bootstrap_clean_labels.py  calibrate_prescan_threshold.py  check_openrouter_rollout.py  deactivate_all_targets.py  debug_discovery_run.py  diagnose_target_funnel.py  diagnostic_axis_stats.py  docker-smoke.sh  eval_cover_letter.py  eval_derive_target.py  eval_grading_prompts.py  eval_logistics_shadow.py  eval_phase1_triage.py  eval_target_suggestion.py  gen_sample_eval_set.py  investigate_score_ceiling.py  judge_grading_variants.py  load_test.py  measure_neardup_density.py  multi_model_judge.py  openrouter_smoke.py  seed_sources_from_career_ops.py  wipe_user_data.py
apps/wyrdfold-api/supabase/templates/: magic-link.html
apps/wyrdfold-api/tests/: conftest.py  test_account_deletion.py  test_analysis.py  test_annotations.py  test_apikey_scope.py  test_ashby.py  test_ats_detect.py  test_ats_lint.py  test_axis_weights.py  test_axis_weights_crud.py  test_backfill_relevance_prefilter.py  test_batch.py  test_bootstrap_clean_labels.py  test_broken_access_control.py  test_byok_client.py  test_byok_keys.py  test_byok_poller.py  test_cache.py  test_chunks.py  test_consolidate.py  test_constants.py  test_conversation_orchestrator.py  test_cover_letter.py  test_data_export.py  test_date_normalize.py  test_dependencies.py  test_deploy_config.py  test_derive.py  test_derive_profile_from_label.py  test_docx_renderer.py  test_docx_storage_roundtrip.py  test_docx_style.py  test_embeddings_mock.py  test_embeddings_pricing.py  test_embeddings_voyage.py  test_erasure_coverage.py  test_eval_phase1_coverage.py  test_eval_sample_fixture.py  test_extract.py  test_feedback_learner.py  (+120 more)
apps/wyrdfold-api/tests/golden/: llm_behavior_contract.txt
apps/wyrdfold-api/tests/integration/: conftest.py  test_account_cascade_fk.py  test_contribution_voting.py  test_learner_rate_cap.py  test_logistics_filter_integration.py  test_operator_archived_view.py  test_reference_jd_attribution.py  test_rls_experience_chunks.py  test_rls_experience_reads.py  test_rls_experience_slice2.py  test_rls_export.py  test_rls_feedback.py  test_rls_global_archive.py  test_rls_jobs_reads.py  test_rls_phase2_status_user_targets.py  test_rls_profile_reads.py  test_rls_profile_writes.py  test_rls_reference_jds.py  test_rls_score_write.py  test_rls_storage.py  test_rls_tailor.py  test_rls_user_jobs.py  test_rls_write_denial.py  test_score_floor_exemption.py
apps/wyrdfold-api/tests/support/: __init__.py  fake_supabase.py
(+470 files in other folders)
