[project]
name = "wyrdfold-api"
version = "0.1.0"
description = "WyrdFold API — FastAPI backend for the WyrdFold job-search workspace"
authors = [{ name = "Daniel Joffe" }]
readme = "README.md"
license = { text = "FSL-1.1-ALv2" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "httpx>=0.28",
  "supabase>=2.13",
  "pydantic-settings>=2.7",
  "beautifulsoup4>=4.13",
  "bleach>=6.2",
  "pyjwt[crypto]>=2.10",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "python-multipart>=0.0.18",
  "anthropic>=0.40",
  "voyageai>=0.3",
  "twilio>=9.0",
  "sentry-sdk[fastapi]>=2.19",
  "apscheduler>=3.11",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "mypy>=1.15",
  "types-bleach>=6.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "I", "N", "W", "UP",
  "B", "S", "SIM", "RUF", "T20",
  "PTH",    # flake8-use-pathlib — Path over os.path
  "ASYNC",  # async anti-patterns (blocking calls in coroutines)
  "C4",     # comprehensions (dict(generator) → dict comprehension, etc.)
  "PIE",    # misc lints (unnecessary dict-kwargs, no-op patterns)
  "ISC",    # implicit string concat — catches missing commas in lists
  "LOG",    # logging best practices (no f-strings/string-add in logger calls)
  "DTZ",    # naive datetime — every datetime must be tz-aware
]
ignore = [
  "B008",   # Depends() in FastAPI arg defaults is idiomatic
  "S105",   # false positives on non-secret pattern constants
  "S106",   # false positives on non-secret pattern constants
  "RUF001", # intentional en dashes in prompts/docstrings
  "RUF002", # intentional unicode in docstrings (×, –)
  "SIM108", # if/else blocks are clearer than ternaries for query builders
]

[tool.ruff.lint.isort]
# The supabase/ CLI workdir alongside this package makes ruff auto-detect the
# `supabase` SDK import as first-party. Pin it as third-party.
known-third-party = ["supabase"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501", "RUF059", "F841", "SIM117", "E402", "B017", "S311"]
"scripts/**/*.py" = [
  "T201",     # CLI scripts use print() for user output
  "ASYNC240", # sync pathlib in async eval scripts is fine (no event-loop blocking concern for one-off runs)
  "S311",     # random for stratified sampling in evals — not crypto
  "S110",     # try/except/pass is the standard "preserve partial data on any error" pattern in eval scripts
  "B007",     # unused-loop-var (for k, _ in items()) — common when iterating dict-likes for keys
  "B023",     # loop-var binding in inner functions — eval scripts call them immediately
  "RUF003",   # × in comments is the standard "by" shorthand (e.g. "89 cases × 5 models")
  "E501",     # long lines in markdown report builders are fine; scripts emit their own formatting
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests (RLS gates, #79) need a live local Supabase and are
# deselected by default — the standard suite stays hermetic. Opt in with
# `pytest -m integration` (after `supabase start`). They also self-skip
# when the local stack isn't reachable.
addopts = "--cov=app --cov-report=term-missing --no-cov-on-fail -m 'not integration'"
markers = [
  "integration: requires a live local Supabase stack (deselected by default)",
]
